Changed Cover page

--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,3 +1,7 @@
+#about {
+    margin-top: 2rem;
+}
+
 .about__container {
     display: grid;
     grid-template-columns: 40% 55%;
@@ -82,6 +86,10 @@ p {
 
 /************************* Media Queries (Medium Devices) ***************************/
 @media screen and (max-width: 1024px) {
+    #about {
+        margin-top: 2rem;
+    }
+    
     .about__container {
         grid-template-columns: 1fr;
         gap: 0;
@@ -99,6 +107,9 @@ p {
 
 /************************* Media Queries (Small Devices) **************************/
 @media screen and (max-width: 600px) {
+    #about {
+        margin-top: 2rem;
+    }
     .about__me {
         width: 65%;
         margin: 0 auto 3rem;
