--- a/src/Components/header/Header.css
+++ b/src/Components/header/Header.css
@@ -1,36 +1,90 @@
 header {
-    height: 100vh;
+    height: 80vh;
     padding-top: 7rem;
     overflow: hidden;
+    gap: 2rem;
 }
 
 .header__container {
-    text-align: center;
+    align-items: center;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     position: relative;
+    background: var(--colour-bg-variant);
+    border: 1px solid transparent;
+    border-radius: 1rem;
+    padding: 2rem;
+    text-align: center;
+    transition: var(--transition);
 }
 
+.about__card {
+    background: var(--colour-bg-variant);
+    border: 1px solid transparent;
+    border-radius: 1rem;
+    padding: 2rem;
+    text-align: center;
+    transition: var(--transition);
+}
+
+.header__container:hover {
+    background: transparent;
+    border-color: var(--colour-primary-variant);
+    cursor: default;
+}
+
+.myname {
+    font-size: 3rem;
+}
+
+.header__details {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    left: 0;
+
+}
 /******************** CTA ********************************/
 
 .CTA {
     margin-top: 2.5rem;
     display: flex;
     gap: 1.2rem;
-    justify-content: center;
+    /*justify-content: center;*/
 }
 
 /******************** Header Socials ********************************/
 
 .header__socials {
+    /*display: flex;
+    flex-direction: column;*/
+    margin-top: 3rem;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    gap: 1rem;
+    margin-bottom: 4rem;
+    /*align-items: center;
     gap: 0.8rem;
     position: absolute;
     left: 0;
-    bottom: 3rem;
+    bottom: 3rem;*/
 }
 
+.header__socials a {
+    background: var(--colour-primary);
+    color: var(--colour-bg);
+    padding: 0.8rem;
+    border-radius: 0.7rem;
+    display: flex;
+    border: 1px solid transparent;
+}
+
+.header__socials a:hover {
+    background: transparent;
+    color: var(--colour-primary);
+    border-color: var(--colour-primary);
+}
+/*
 .header__socials::after {
     content: "";
     width: 1px;
@@ -43,36 +97,39 @@ header {
     width: 1px;
     height: 4rem;
     background: var(--colour-primary);
-}
+}*/
 
 /************************* My Image *********************************/
 
 .me {
-    width: 22rem;
-    height: 30rem;
+    display: none; }
+    /*width: 20rem;
+    height: 22rem;
     position: absolute;
-    left: calc(50% - 11rem);
+    left: calc(60%);
+    border-radius: 2rem;
+    /*left: calc(50% - 11rem);*
     margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    /*border: 2.5px solid var(--colour-primary);*/
+    /*border-radius: 12rem 12rem 0 0;
+    /*border: 2.5px solid var(--colour-primary);
     overflow: hidden;
     padding: -1rem 1.5rem 1.5rem 1.5rem;
     -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
-    mask-image: linear-gradient(to bottom, rgb(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    mask-image: linear-gradient(to bottom, rgb(0, 0, 0, 1), rgba(0, 0, 0, 0));*/
 
     /* To make image a circle
     border-radius: 50%;
     border: 2px solid;
     border-color: rgb(255, 255, 255);
-    */
-}
+    *
+}*/
 
 /************************* Scroll down *********************************/
 .scroll__down {
     position: absolute;
-    right: -2.5rem;
-    bottom: 5rem;
-    transform: rotate(90deg);
+    /*right: -2.5rem;*/
+    transform: translateY(15rem);
+    /*transform: rotate(90deg);*/
     font-weight: 300;
     font-size: 0.9rem
 }
@@ -86,12 +143,20 @@ header {
 
 /************************* Media Queries (Medium Devices) ***************************/
 @media screen and (max-width: 1024px) {
+    .header__container {
+        gap: 2rem;
+    }
+
     header {
         height: 70vh;
     }
 
+    .myname {
+        font-size: 2rem;
+    }
+
     .header__socials {
-        bottom: 15rem;
+        margin-top: 5rem;
     }
 
     .scroll__down {
@@ -101,11 +166,10 @@ header {
 
 /************************* Media Queries (Small Devices) **************************/
 @media screen and (max-width: 700px) {
+    .header__continer {
+        gap: 3rem;
+    }
     header {
         height: 110vh;
-    }
-
-    .header__socials, .scroll__down {
-        display: none;
     }
 }
