Added Capstone project in portfolios

--- a/src/Components/header/Header.css
+++ b/src/Components/header/Header.css
@@ -17,6 +17,7 @@ header {
     padding: 2rem;
     text-align: center;
     transition: var(--transition);
+    margin-bottom: -20rem;
 }
 
 .about__card {
